--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                 <div class="nums d-flex justify-content-between mb-4">
                     <div class="num__wrapper d-flex flex-column">
                         <label for="num1">NUM 1</label>
-                        <input class="border-0" id="num1" type="text">   
+                        <input class="border-0"  onkeyup="this.value = this.value.replace(/[^\d]/g,'');" maxlength="5" id="num1" type="text">   
                     </div>
-                    <div class="num__wrapper d-flex align-items-end">
-                        <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-plus-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                    <div class="num__wrapper d-flex align-items-end operatator">
+                          <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-question" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
                           </svg>
                     </div>
                     <div class="num__wrapper d-flex flex-column">
                         <label for="num2">NUM 2</label>
-                        <input class="border-0" id="num2" type="text">   
+                        <input class="border-0" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" maxlength="5" id="num2" type="text">   
                     </div>
                 </div>
                     <input readonly id='result' class="container border-left-0 border-top-0 border-right-0" type="text">
@@ -33,34 +33,34 @@
 
             <div class="numbers col-md-4">
                 <ul class="numbers__wrapper">
-                    <li class="number">1</li>
-                    <li class="number">2</li>
-                    <li class="number">3</li>
-                    <li class="number">4</li>
-                    <li class="number">5</li>
-                    <li class="number">6</li>
-                    <li class="number">7</li>
-                    <li class="number">8</li>
-                    <li class="number">9</li>
-                    <li class="number">0</li>
+                    <li data-num='1' class="number">1</li>
+                    <li data-num='2' class="number">2</li>
+                    <li data-num='3' class="number">3</li>
+                    <li data-num='4' class="number">4</li>
+                    <li data-num='5' class="number">5</li>
+                    <li data-num='6' class="number">6</li>
+                    <li data-num='7' class="number">7</li>
+                    <li data-num='8' class="number">8</li>
+                    <li data-num='9' class="number">9</li>
+                    <li data-num='0' class="number">0</li>
                 </ul>
                 <ul class="d-flex justify-content-between math_act-group">
-                    <li >
+                    <li data-action='addition' class="operator__btn">
                         <svg  width="3em" height="3em" viewBox="0 0 16 16" class="math_act bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                         </svg>
                     </li>
-                    <li >
+                    <li data-action='subtraction' class="operator__btn">
                         <svg width="3em" height="3em" viewBox="0 0 16 16" class="math_act bi bi-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
                           </svg>
                     </li>
-                    <li >
+                    <li data-action='multiplication' class="operator__btn">
                         <svg width="3em" height="3em" viewBox="0 0 16 16" class="math_act bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                           </svg>
                     </li>
-                    <li >
+                    <li data-action='division' class="operator__btn">
                         <svg width="3em" height="3em" viewBox="0 0 16 16" class="math_act bi bi-slash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M11.354 4.646a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708l6-6a.5.5 0 0 1 .708 0z"/>
                           </svg>
@@ -72,5 +72,6 @@
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
