--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="nums d-flex justify-content-between mb-4">
                     <div class="num__wrapper d-flex flex-column">
                         <label for="num1">NUM 1</label>
-                        <input class="border-0"  onkeyup="this.value = this.value.replace(/[^\d]/g,'');" maxlength="5" id="num1" type="text">   
+                        <input class="border-0"  onkeyup="this.value = this.value.replace(/[^\d,/.]/g,'');" maxlength="5" id="num1" type="text">   
                     </div>
                     <div class="num__wrapper d-flex align-items-end operatator">
                           <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-question" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -24,7 +24,7 @@
                     </div>
                     <div class="num__wrapper d-flex flex-column">
                         <label for="num2">NUM 2</label>
-                        <input class="border-0" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" maxlength="5" id="num2" type="text">   
+                        <input class="border-0" onkeyup="this.value = this.value.replace(/[^\d,/.]/g,'');" maxlength="5" id="num2" type="text">   
                     </div>
                 </div>
                     <input readonly id='result' class="container border-left-0 border-top-0 border-right-0" type="text">
@@ -68,7 +68,10 @@
                 </ul>
                 <button class="button">calculate</button>
             </div>
-        </div>    
+        </div>   
+        <div class="prompt ">
+            <p>Choose a action...</p>
+        </div> 
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
